# f7disco-rust-demo

./: Cargo.toml
src/: main.rs
